# ray-tracing-next-week

./: .gitignore  CMakeLists.txt  README.md  aabb.h  bvh.h  camera.h  color.h  convert.py  hittable.h  hittable_list.h  interval.h  main.cpp  material.h  perlin.h  quad.h  ray.h  rt.h  rt_stb_image.h  sphere.h  texture.h  vec3.h
images/: .gitignore
rendered_images/: cornell_box.ppm
